C++/include/Swelio.h

BOOL WINAPI SendAPDU(int readerNumber, LPCBYTE apdu, DWORD apduLen, PCHAR result, LPDWORD len);
// Summary:
//      Read eID card and save the identity information to CSV memory buffer
// Description:
//      Use this function to read the information about the owner of the card and
//      save it to CSV memory buffer.
// Arguments:
//		readerNumber - the card reader index
//      buffer - Memory buffer
// Return Value:
//      Returns TRUE if the information is retrieved from the card, otherwise returns FALSE
BOOL WINAPI SavePersonCsvToStreamA(int readerNumber, void* buffer);
// Summary:
//		Sign data with eID card according to CMS standard
// Description:
//		Create CMS signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CardSignCMS(int readerNumber, BYTE *data, UINT dataLen, BYTE *signature, UINT *signatureLen);
// Summary:
//		Sign data with eID card according to CMS standard
// Description:
//		Create CMS signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
//      error - error information
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CardSignCMSEx(int readerNumber, BYTE* data, UINT dataLen, BYTE* signature, UINT* signatureLen, ErrorInformation* Error);
// Summary:
//		Sign data with eID card according to CADES-T standard
// Description:
//		Create CADES-T signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CardSignCadesT(int readerNumber, BYTE *data, UINT dataLen, BYTE *signature, UINT *signatureLen);
// Summary:
//		Sign data with eID card according to CADES-T standard
// Description:
//		Create CADES-T signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
//      error - error information
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CardSignCadesTEx(int readerNumber, BYTE* data, UINT dataLen, BYTE* signature, UINT* signatureLen, ErrorInformation* error);
// Summary:
//		Sign data with the certificate file according to CMS standard
// Description:
//		Create CMS signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		certificate - The name of the certificate file
//      password - The private key password  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CertSignCMS(LPWSTR certificate, LPWSTR password, BYTE *data, UINT dataLen, BYTE *signature, UINT *signatureLen);
// Summary:
//		Sign data with the certificate file according to CMS standard
// Description:
//		Create CMS signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		certificate - The name of the certificate file
//      password - The private key password  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
//      error - error information
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CertSignCMSEx(LPWSTR certificate, LPWSTR password, BYTE* data, UINT dataLen, BYTE* signature, UINT* signatureLen, ErrorInformation* error);
// Summary:
//		Sign data with the certificate file according to CADES-T standard
// Description:
//		Create CADES-T signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		certificate - The name of the certificate file
//      password - The private key password  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CertSignCadesT(LPWSTR certificate, LPWSTR password, BYTE *data, UINT dataLen, BYTE *signature, UINT *signatureLen);
// Summary:
//		Sign data with the certificate file according to CADES-T standard
// Description:
//		Create CADES-T signature for data buffer. Can be used for digital signature of PDF documents in combination with external PDF library
// Arguments:
//		certificate - The name of the certificate file
//      password - The private key password  
//		data - the data to sign
//		dataLen - the size of the data buffer
//		signature - the signature buffer
//		signatureLen - the size of the signature buffer
//      error - error information
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI CertSignCadesTEx(LPWSTR certificate, LPWSTR password, BYTE* data, UINT dataLen, BYTE* signature, UINT* signatureLen, ErrorInformation* error);
/// <summary>
/// Sign data with the certificate according to CMS standard
/// </summary>
/// <param name="certificate">The byte array with the signing certificate content</param>
/// <param name="certLen">The size of th signing certificate</param>
/// <param name="password">The password of the signing certificate</param>
/// <param name="data">The data to be signed</param>
/// <param name="dataLen">The size of the data to be signed</param>
/// <param name="signature">The value of the signature</param>
/// <param name="signatureLen">The size of the signature</param>
/// <param name="error">The error information</param>
/// <returns>Returns true if the operation is successful, otherwise returns false</returns>
BOOL WINAPI CertSignCMSData(BYTE* certificate, DWORD certLen, LPWSTR password, BYTE* data, UINT dataLen, BYTE* signature, UINT* signatureLen, ErrorInformation* error);
/// <summary>
/// Sign data with the certificate according to CADES-T standard
/// </summary>
/// <param name="certificate">The byte array with the signing certificate content</param>
/// <param name="certLen">The size of th signing certificate</param>
/// <param name="password">The password of the signing certificate</param>
/// <param name="data">The data to be signed</param>
/// <param name="dataLen">The size of the data to be signed</param>
/// <param name="signature">The value of the signature</param>
/// <param name="signatureLen">The size of the signature</param>
/// <param name="error">The error information</param>
/// <returns>Returns true if the operation is successful, otherwise returns false</returns>
BOOL WINAPI CertSignCadesTData(BYTE* certificate, DWORD certLen, LPWSTR password, BYTE* data, UINT dataLen, BYTE* signature, UINT* signatureLen, ErrorInformation* error);
// Summary:
//		Initializes ASIC container
// Description:
//		This functions initializes container handle needed for all container operations.
//		Must be called first prior to other container-related calls
// Arguments:
//		Returns container handle which is used for all operations with the container
// Return value:
//		Retrns container handle pointer
LPVOID WINAPI InitializeContainer();
// Summary:
//		Deallocates ASIC container 
// Description:
//		Call this function to deallocate container memory and release container handle. 
// Arguments:
//		container: Container handle, which is allocated by calling InitializeContainer function
// Return value:
//		None
void WINAPI FreeContainer(LPVOID container);
// Summary:
//		Save container to the file
// Description:
//		After adding all necessary files to the container call this function to save 
//		container to the file
// Arguments:
//		container: Container handle, which is allocated by calling InitializeContainer function
//		fileName: Desired name of the container file 
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI SaveContainer(LPVOID container, LPWSTR fileName);
// Summary:
//		Add existing file to the container
// Description:
//		Call this function to include the file to the container. The file must exist.
// Arguments:
//		container: Container handle, which is allocated by calling InitializeContainer function
//		fileName: The name of the file which will be added to the container 
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI AddFileToContainer(LPVOID container, LPSTR fileName);
// Summary:
//		Assign certificate for signing ASIC container
// Description:
//		Use this function to assign certificate which will be used to sign container at 
//		the moment when container will be saved to the file
// Arguments:
//		container: Container handle, which is allocated by calling InitializeContainer function
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI ContainerCertificate(LPVOID container, LPWSTR fileName, LPWSTR password);
// Summary:
//		Pick certificate to sign ASIC container
// Description:
//		Use this function to let user pick the certificate to sign ASIC contaner
//		The dialog to choose the certificate will be shown to the user
// Arguments:
//		container: Container handle, which is allocated by calling InitializeContainer function
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI ContainerPickCertificate(LPVOID container);
// Summary:
//		Select EID card certificate to sign ASIC container
// Description:
//		Call this function to select EID certificate to sign ASIC container
// Arguments:
//		container: Container handle, which is allocated by calling InitializeContainer function
// Return value:
//		Returns true if the operation is successful, otherwise returns false
BOOL WINAPI ContainerEidCertificate(LPVOID container, int readerNumber);