Swelio.Engine/Swelio.Engine/NativeMethods.cs


        [DllImport(DLL_FILE_NAME, EntryPoint = "SavePersonCsvToStreamA", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SavePersonCsvToStreamA(int readerNumber, IntPtr buffer);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SendAPDU", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SendAPDU(int readerNumber, byte[] apdu, int apduLen, byte[] result, ref int len);

        [DllImport(DLL_FILE_NAME, EntryPoint = "InitializeContainer", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern IntPtr InitializeContainer();

        [DllImport(DLL_FILE_NAME, EntryPoint = "FreeContainer", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void FreeContainer(IntPtr container);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveContainer", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SaveContainer(IntPtr container, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "AddFileToContainer", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool AddFileToContainer(IntPtr container, [MarshalAs(UnmanagedType.LPStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ContainerCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ContainerCertificate(IntPtr container, [MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.LPWStr)] string password);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ContainerPickCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ContainerPickCertificate(IntPtr container);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ContainerEidCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ContainerEidCertificate(IntPtr container, int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CardSignCMS", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CardSignCMS(int readerNumber, byte[] data, int dataLen, byte[] signature, ref int signatureLen);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CardSignCMSEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CardSignCMSEx(int readerNumber, byte[] data, int dataLen, byte[] signature,ref int signatureLen, [In, Out] EIDError error);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CardSignCadesT", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CardSignCadesT(int readerNumber, byte[] data, int dataLen, byte[] signature, ref int signatureLen);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CardSignCadesTEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CardSignCadesTEx(int readerNumber, byte[] data, int dataLen, byte[] signature, ref int signatureLen, [In, Out] EIDError error);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CertSignCMS", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CertSignCMS(string certificate, string password, byte[] data, int dataLen, byte[] signature, ref int signatureLen);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CertSignCMSEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CertSignCMSEx(string certificate, string password, byte[] data, int dataLen, byte[] signature, ref int signatureLen, [In, Out] EIDError error);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CertSignCadesT", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CertSignCadesT(string certificate, string password, byte[] data, int dataLen, byte[] signature, ref int signatureLen);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CertSignCadesTEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CertSignCadesTEx(string certificate, string password, byte[] data, int dataLen, byte[] signature, ref int signatureLen, [In, Out] EIDError error);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CertSignCMSData", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CertSignCMSData(byte[] certificate, int certLen, string password, byte[] data, int dataLen, byte[] signature, ref int signatureLen, [In, Out] EIDError error);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CertSignCadesTData", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CertSignCadesTData(byte[] certificate, int certLen, string password, byte[] data, int dataLen, byte[] signature, ref int signatureLen, [In, Out] EIDError error);





    }



}
